--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "@heroui/react": "^2.7.5",
     "@heroui/system": "^2.4.12",
     "@heroui/theme": "^2.4.12",
-    "framer-motion": "^12.5.0",
+    "animate.css": "^4.1.1",
+    "framer-motion": "^12.6.3",
     "next": "14.2.18",
     "react": "^18",
+    "react-animate-on-scroll": "^2.1.9",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-animate-on-scroll": "^2.1.8",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
